--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Calls Music</h1>
+    <h1 class="callsmusic">Calls Music</h1>
     <h2>GitHub</h2>
     <ul>
       <li><a href="https://github.com/callsmusic">@CallsMusic</a></li>
@@ -36,7 +36,7 @@
         <a href="https://github.com/BlackStoneReborn">@BlackStoneReborn</a>
       </li>
     </ul>
-    <hr />
-    &copy; 2021 Calls Music.
+    <div class="separator"></div>
+    <p>&copy; 2021, <span class="callsmusic">Calls Music.</span></p>
   </body>
 </html>
