--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     <h2>Donate</h2>
     <h3>BitCoin</h3>
     <ul>
-      <li><code>bc1q0zflkafncpxy87rc7tcx23v7tdtu0vkxe2dyap</code></li>
-      <li><code>bc1q3kxdmzuqecwusaq8tlrfgdhx790yd5tmenwwmd</code></li>
+      <li>bc1q0zflkafncpxy87rc7tcx23v7tdtu0vkxe2dyap</li>
+      <li>bc1q3kxdmzuqecwusaq8tlrfgdhx790yd5tmenwwmd</li>
     </ul>
     <div class="separator"></div>
     <p>&copy; 2021, <span class="callsmusic">Calls Music.</span></p>
