--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <li><a href="https://github.com/rojserbest">@rojserbest</a></li>
       <li><a href="https://github.com/dashezup">@dashezup</a></li>
       <li><a href="https://github.com/alemidev">@alemidev</a></li>
+      <li><a href="https://github.com/xencodes">@xencodes</a></li>
       <li><a href="https://github.com/DavideGalilei">@DavideGalilei</a></li>
       <li><a href="https://github.com/TheHamkerCat">@TheHamkerCat</a></li>
       <li>
