--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   </head>
   <body>
     <h1 class="callsmusic">Calls Music</h1>
+    <h2>GitLab</h2>
+    <ul>
+      <li><a href="https://gitlab.com/callsmusic">@CallsMusic</a></li>
+    </ul>
     <h2>GitHub</h2>
     <ul>
       <li><a href="https://github.com/callsmusic">@CallsMusic</a></li>
