--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </ul>
     <h2>GitHub</h2>
     <ul>
-      <li><a href="https://github.com/callsmusic">@CallsMusic</a></li>
+      <li><a href="https://github.com/callsmusic">@CallsMusic</a> (flagged)</li>
     </ul>
     <h2>Channels</h2>
     <ul>
