--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1 class="callsmusic">Calls Music</h1>
     <h2>GitHub</h2>
     <ul>
-      <li><a href="https://github.com/callsmusic">@CallsMusic</a> (flagged)</li>
+      <li><a href="https://github.com/callsmusic">@CallsMusic</a></li>
     </ul>
     <h2>Channels</h2>
     <ul>
