--- a/index.html
+++ b/index.html
@@ -45,6 +45,6 @@
       <li>bc1q3kxdmzuqecwusaq8tlrfgdhx790yd5tmenwwmd</li>
     </ul>
     <div class="separator"></div>
-    <p>&copy; 2021, <span class="callsmusic">Calls Music.</span></p>
+    <p>Copyright © 2021 Calls Music.</p>
   </body>
 </html>
