--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <li><a href="https://t.me/joinchat/4SgNGQ3m0WoxZjVi">Off-topic</a></li>
       <li><a href="https://t.me/VCSets">VCSets</a></li>
       <li><a href="https://t.me/joinchat/AAT2sLQ26ZIyMTky">Translators</a></li>
+      <li><a href="https://t.me/callsmusicreports">Reports</a></li>
     </ul>
     <h2>The Team</h2>
     <ul>
