--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
       <li><a href="https://t.me/joinchat/AAT2sLQ26ZIyMTky">Translators</a></li>
       <li><a href="https://t.me/callsmusicreports">Reports</a></li>
     </ul>
+    <h2>Partners</h2>
+    <ul>
+      <li><a href="http://t.me/teletipsofficialchannel">TeleTips</a></li>
+    </ul>
     <h2>The Team</h2>
     <ul>
       <li><a href="https://github.com/rojserbest">@rojserbest</a></li>
