--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <ul>
       <li><a href="https://github.com/rojserbest">@rojserbest</a></li>
       <li><a href="https://github.com/dashezup">@dashezup</a></li>
+      <li><a href="https://github.com/ArnabXD">@ArnabXD</a></li>
       <li><a href="https://github.com/alemidev">@alemidev</a></li>
       <li><a href="https://github.com/xencodes">@xencodes</a></li>
       <li><a href="https://github.com/DavideGalilei">@DavideGalilei</a></li>
