--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </ul>
     <h2>The Team</h2>
     <ul>
-      <li><a href="https://github.com/rojserbest">@rojserbest</a></li>
+      <li><a href="https://github.com/roj1512">@roj1512</a></li>
       <li><a href="https://github.com/dashezup">@dashezup</a></li>
       <li><a href="https://github.com/ArnabXD">@ArnabXD</a></li>
       <li><a href="https://github.com/alemidev">@alemidev</a></li>
