--- a/index.html
+++ b/index.html
@@ -17,16 +17,17 @@
     <ul>
       <li><a href="https://t.me/callsmusic">Main</a></li>
       <li><a href="https://t.me/callsmusicupdates">Updates</a></li>
-      <li><a href="https://t.me/joinchat/ULEyEBibRAAyZjcy">GitHub logs</a></li>
+      <li><a href="https://t.me/joinchat/ULEyEBibRAAyZjcy">GitHub Logs</a></li>
     </ul>
     <h2>Chats</h2>
     <ul>
       <li><a href="https://t.me/callsmusicchat">Main</a></li>
-      <li><a href="https://t.me/joinchat/4SgNGQ3m0WoxZjVi">Off-topic</a></li>
+      <li><a href="https://t.me/joinchat/4SgNGQ3m0WoxZjVi">Off-Topic</a></li>
       <li><a href="https://t.me/VCSets">VCSets</a></li>
     </ul>
     <h2>Partners</h2>
     <ul>
+      <li><a href="https://t.me/SquirrelNetwork">Squirrel Network</a></li>
       <li><a href="http://t.me/teletipsofficialchannel">TeleTips</a></li>
     </ul>
     <h2>The Team</h2>
